# rust-saver

./: Cargo.toml  Makefile  README.md  config.yaml
.github/workflows/: rust.yml
backend/: .env  Cargo.toml  Makefile  start_backend.sh
backend/migrations/: 20240706133951_create_table.sql
backend/src/: configuration.rs  main.rs
backend/src/configuration/: database.rs  mod.rs  server.rs
backend/src/routes/: add.rs  mod.rs  remove.rs
docker/: Dockerfile.app  docker-compose.yaml
frontend/: Cargo.toml  Trunk.toml  index.html  start_frontend.sh
frontend/src/: main.rs
frontend/src/components/: form.rs  mod.rs  show_passwords.rs
types/: Cargo.toml
types/src/: lib.rs
