[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.8.0"
config = { version = "0.14", default-features = false, features = ["yaml"] }
env_logger = "0.11.3"
serde = { version = "1.0.203", features = ["derive"] }
sqlx = { version = "0.7.4", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
types = { path= "../types"}
uuid = { version = "1.9.1", default-features = false, features = ["v4"] }
